--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ packages = [{include = "chatting_with_the_guardian"}]
 python = "^3.9"
 psycopg2-binary = "^2.9.5"
 sqlalchemy = "^2.0.5.post1"
+beautifulsoup4 = "^4.11.2"
+requests = "^2.28.2"
+pandas = "^1.5.3"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -17,6 +20,7 @@ alembic = "^1.10.2"
 pytest = "^7.2.2"
 ipython = "^8.11.0"
 black = "^23.1.0"
+pytest-mock = "^3.10.0"
 
 [build-system]
 requires = ["poetry-core"]
