--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pytest = "^7.2.2"
 ipython = "^8.11.0"
 black = "^23.1.0"
 pytest-mock = "^3.10.0"
+docker = "^6.0.1"
 
 [build-system]
 requires = ["poetry-core"]
