--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,12 @@ ipython = "^8.11.0"
 black = "^23.1.0"
 pytest-mock = "^3.10.0"
 docker = "^6.0.1"
+ruff = "^0.0.255"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+
+ignore = ["E501"]
