--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,7 +25,7 @@ jobs:
         poetry install --with dev
     - name: Lint with flake8
       run: |
-        ruff check . 
+        poetry run ruff check . 
     - name: Test with pytest
       run: |
-        pytest
+        poetry run pytest
