--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,13 +22,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install poetry
-        poetry install --with dev
+    - name: |
+        invoke install-dependencies
     - name: Lint with flake8
       run: |
-        poetry run ruff check . 
+        invoke lint 
     - name: Test with pytest
       run: |
-        poetry run pytest
+        invoke test
     - name: Run Migrations
       run: |
-        PROD=TRUE DATABASE_URL=${{ secrets.DATABASE_URL }} poetry run alembic upgrade head
+        invoke run_migrations --prod=TRUE --database-url=${{ secrets.DATABASE_URL }}
