--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ black = "^23.1.0"
 pytest-mock = "^3.10.0"
 docker = "^6.0.1"
 ruff = "^0.0.255"
+invoke = "^2.0.0"
 
 [build-system]
 requires = ["poetry-core"]
