--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install poetry
-    - name: |
+    - run: |
         invoke install-dependencies
     - name: Lint with flake8
       run: |
