--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,6 +22,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install poetry
+        poetry config virtualenvs.create false
     - run: |
         invoke install-dependencies
     - name: Lint with flake8
