--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,15 +22,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install poetry
-        poetry config virtualenvs.create false
     - run: |
-        invoke install-dependencies
+        poetry run invoke install-dependencies
     - name: Lint with flake8
       run: |
-        invoke lint 
+        poetry run invoke lint 
     - name: Test with pytest
       run: |
-        invoke test
+        poetry run invoke test
     - name: Run Migrations
       run: |
-        invoke run_migrations --prod=TRUE --database-url=${{ secrets.DATABASE_URL }}
+        poetry run invoke run_migrations --prod=TRUE --database-url=${{ secrets.DATABASE_URL }}
