--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,14 +22,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install poetry
+        poetry install --with dev
     - run: |
-        poetry run invoke install-dependencies
-    - name: Lint with flake8
-      run: |
         poetry run invoke lint 
-    - name: Test with pytest
-      run: |
+    - run: |
         poetry run invoke test
-    - name: Run Migrations
-      run: |
+    - run: |
         poetry run invoke run_migrations --prod=TRUE --database-url=${{ secrets.DATABASE_URL }}
