--- a/.github/workflows/ingestion.yml
+++ b/.github/workflows/ingestion.yml
@@ -19,6 +19,6 @@ jobs:
         pip install poetry
         poetry install --with dev
     - run: |
-        python -m chatting_with_the_guardian.ingestion.main
+        poetry run python -m chatting_with_the_guardian.ingestion.main
       env:
         DATABASE_URL: ${{ secrets.DATABASE_URL }}
