--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ sqlalchemy = "^2.0.5.post1"
 beautifulsoup4 = "^4.11.2"
 requests = "^2.28.2"
 pandas = "^1.5.3"
+pgvector = "^0.1.6"
 
 
 [tool.poetry.group.dev.dependencies]
