--- a/.github/workflows/ingestion.yml
+++ b/.github/workflows/ingestion.yml
@@ -1,8 +1,8 @@
-name: job_1
+name: ingestion
 
 on:
   schedule:
-    - cron:  '0,30 * * * *'
+    - cron:  "0 */6 * * *"
   workflow_dispatch:
 
 jobs:
