--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ beautifulsoup4 = "^4.11.2"
 requests = "^2.28.2"
 pandas = "^1.5.3"
 pgvector = "^0.1.6"
+spacy = "^3.5.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -25,6 +26,7 @@ pytest-mock = "^3.10.0"
 docker = "^6.0.1"
 ruff = "^0.0.255"
 invoke = "^2.0.0"
+jupyterlab = "^3.6.1"
 
 [build-system]
 requires = ["poetry-core"]
