--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ packages = [{include = "chatting_with_the_guardian"}]
 [tool.poetry.dependencies]
 python = "^3.9"
 psycopg2-binary = "^2.9.5"
-sqlalchemy = "^2.0.5.post1"
+sqlalchemy = "^1"
 beautifulsoup4 = "^4.11.2"
 requests = "^2.28.2"
 pandas = "^1.5.3"
