--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ requests = "^2.28.2"
 pandas = "^1.5.3"
 pgvector = "^0.1.6"
 spacy = "^3.5.1"
+langchain = "^0.0.115"
 
 
 [tool.poetry.group.dev.dependencies]
