--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ requests = "^2.28.2"
 pandas = "^1.5.3"
 pgvector = "^0.1.6"
 spacy = "^3.5.1"
-langchain = "^0.0.115"
+transformers = "^4.27.1"
+torch = "^2.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
