--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,11 @@ docker = "^6.0.1"
 ruff = "^0.0.255"
 invoke = "^2.0.0"
 
+
+[tool.poetry.group.local_dev.dependencies]
+jupyterlab = "^3.6.1"
+ipython = "^8.11.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
