--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pgvector = "^0.1.6"
 spacy = "^3.5.1"
 transformers = "^4.27.1"
 torch = "^2.0.0"
+boto3 = "^1.26.129"
 
 
 [tool.poetry.group.dev.dependencies]
