pass DO creds to env

--- a/.github/workflows/named-entity-population.yml
+++ b/.github/workflows/named-entity-population.yml
@@ -24,3 +24,5 @@ jobs:
         poetry run python -m chatting_with_the_guardian.named_entity_population.main
       env:
         DATABASE_URL: ${{ secrets.DATABASE_URL }}
+        ACCESS_ID: ${{ secrets.ACCESS_ID }}
+        SECRET_KEY: ${{ secrets.SECRET_KEY }}
