--- a/.github/workflows/ingestion.yml
+++ b/.github/workflows/ingestion.yml
@@ -22,3 +22,5 @@ jobs:
         poetry run python -m chatting_with_the_guardian.ingestion.main
       env:
         DATABASE_URL: ${{ secrets.DATABASE_URL }}
+        ACCESS_ID: ${{ secrets.ACCESS_ID }}
+        SECRET_KEY: ${{ secrets.SECRET_KEY }}
